# SudokuImageGeneration

./: .gitignore  Cargo.toml  README.md  Template Project Description.tex  liste.html  test.html
Backend/: .gitignore  Cargo.toml  README.md  solution_9.txt
Backend/data/: sudoku_solutions_4x4.txt  sudoku_solutions_6x6.txt
Backend/src/: apply_permutations.rs  calculation.rs  constants.rs  difficulty.rs  fill_grid.rs  generate_picture.rs  main.rs  possibilities_first_column.rs  set_values.rs  set_values_from_solution.rs  sort.rs  sudoku.rs  sudoku_clauses.rs  testen_Wahrscheinlichkeit.rs  testen_der_neuen_loesung.rs
Frontend/: .gitignore  backendtest.html  dynamic.html  index.html  liste.html  script.js  styles.css  sudoku.js  test.html  ui.js
src/: apply_permutations.rs  main.rs  possibilities_first_column.rs  sort.rs  sudoku.rs  sudoku_clauses.rs  testen_Wahrscheinlichkeit.rs
