[package]
name = "ReihenTests"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
cadical = "0.1"
actix-web = "4.3"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
image = "0.24"
num_cpus = "1.13"
once_cell = "1.18"